fix - tooltip position on mobile

--- a/src/app/wizard/create-profile/create-profile.sass
+++ b/src/app/wizard/create-profile/create-profile.sass
@@ -50,3 +50,6 @@
 		span
 			margin: 0
 			color: $c-primary-txt
+
+	.choose-path
+		position: relative
